Alignment issues

--- a/Payment/PaymentWeb/src/main/webapp/resources/style/styles.less
+++ b/Payment/PaymentWeb/src/main/webapp/resources/style/styles.less
@@ -99,6 +99,12 @@ md-table-pagination > .limit-select, .page-select, .buttons > .label {
  text-align: center;
 }
 
+.item-details { 
+  width: 83px;
+  padding-top: 5px;
+}
+
+
 // #efede9;  #dcdfd1; 
 
 
